--- a/themes/hugo-lodi-theme/layouts/partials/nav_casestudy.html
+++ b/themes/hugo-lodi-theme/layouts/partials/nav_casestudy.html
@@ -4,6 +4,6 @@
     </a>
     <h5>{{ .Params.nav_heading }}</h5>
     <div class="sub-navigation">
-        <a href="{{ .Site.BaseURL }}" class="main-navigation-link" data-scroll-goto="2">Case Studies</a>
+        <a href="{{ .Site.BaseURL }}" class="main-navigation-link" data-scroll-goto="2">Portfolio</a>
     </div>
 </nav>
